# punksim-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
data/: mods.toml  names.toml  seed.toml  transport_network.toml
public/: main.css  transport-graph.js
src/: data.rs  global.rs  main.rs  net.rs  population.rs  time.rs  transport.rs  ui.rs  web.rs
src/population/: citizen_seeder.rs  fatigue.rs  hunger.rs  hunger_system.rs  seeding.rs
src/ui/: census_ui.rs  clock_ui.rs  individuals_ui.rs  network.rs  population_ui.rs  sockets.rs  web.rs
templates/: layout.html
templates/partials/: census.html  clock.html  individuals.html  transport_network.html  trips.html
