[package]
name = "punksim-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1" }
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
chrono = { version = "0.4.31", features = ["serde"] }
flume = { version = "0.11.0" }
futures-util = "0.3.28"
rand = "0.8.5"
rouille = "3.6.2"
serde = "1.0.189"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20.1"
toml = "0.8.2"
tungstenite = "0.20.1"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
